Configure tests: exclude the use of the system environment