@@ -6,9 +6,11 @@ import com.study.server.utils.HttpRequestGenerator;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -32,20 +34,17 @@ class FileControllerTest {
 
     @Test
     @DisplayName("Should return a response matching the request")
-    void handle1() {
-        var sourceDir = System.getenv().get("CONF_DIR");
-        var expectedHost = "food.com";
-        var controller = new FileController(expectedHost, sourceDir + File.separator + expectedHost);
+    void handle1() throws URISyntaxException, IOException {
+        var host = "food.com";
+        var hostUri = FileController.class.getClassLoader().getResource(host).toURI();
+        var hostPath = Paths.get(hostUri).toString();
+        var controller = new FileController(host, hostPath);
         var request = HttpRequestGenerator.createGetRequest2();
 
-        var file = new File(sourceDir
-                + File.separator + expectedHost
-                + File.separator + request.getPath()
-                + "index.html");
         HttpResponse expectedResponse = new HttpResponse.Builder()
                 .setProtocol("HTTP/1.1")
                 .setStatusCode(StatusCode._200.toString())
-                .setBody(getBodyLine(file))
+                .setBody(getBodyString(Path.of(hostPath + "/index.html")))
                 .build();
         HttpResponse response = controller.handle(request);
 
@@ -54,19 +53,17 @@ class FileControllerTest {
 
     @Test
     @DisplayName("Should return a response matching the request")
-    void handle2() {
-        var sourceDir = System.getenv().get("CONF_DIR");
-        var expectedHost = "food.com";
-        var controller = new FileController(expectedHost, sourceDir + File.separator + expectedHost);
+    void handle2() throws URISyntaxException, IOException {
+        var host = "food.com";
+        var hostUri = FileController.class.getClassLoader().getResource(host).toURI();
+        var hostPath = Paths.get(hostUri).toString();
+        var controller = new FileController(host, hostPath);
         var request = HttpRequestGenerator.createGetRequest1();
 
-        var file = new File(sourceDir
-                + File.separator + expectedHost
-                + File.separator + request.getPath());
         HttpResponse expectedResponse = new HttpResponse.Builder()
                 .setProtocol("HTTP/1.1")
                 .setStatusCode(StatusCode._200.toString())
-                .setBody(getBodyLine(file))
+                .setBody(getBodyString(Path.of(hostPath + "/css/foo.css")))
                 .build();
         HttpResponse response = controller.handle(request);
 
@@ -75,10 +72,10 @@ class FileControllerTest {
 
     @Test
     @DisplayName("Should return a response with code 404 if the requested file was not found")
-    void handle3() {
-        var sourceDir = System.getenv().get("CONF_DIR");
-        var expectedHost = "good.com";
-        var controller = new FileController(expectedHost, sourceDir + File.separator + expectedHost);
+    void handle3() throws URISyntaxException {
+        var tmpUri = FileController.class.getClassLoader().getResource("food.com").toURI();
+        var hostPath = Paths.get(tmpUri).toString().replace("food", "good");
+        var controller = new FileController("good.com", hostPath);
         var request = HttpRequestGenerator.createGetRequest2();
 
         HttpResponse expectedResponse = new HttpResponse.Builder()
@@ -91,18 +88,13 @@ class FileControllerTest {
         assertEquals(expectedResponse, response);
     }
 
-    private String getBodyLine(File file) {
-        StringBuilder sb = new StringBuilder();
-        try (FileInputStream fileInputStream = new FileInputStream(file)) {
-            byte[] fis = fileInputStream.readAllBytes();
+    private String getBodyString(Path path) throws IOException {
+        var fis = Files.readAllBytes(path);
+        var sb = new StringBuilder();
 
-            for (byte b : fis) {
-                sb.append(b).append("\r\n");
-            }
-        } catch (IOException e) {
-            e.printStackTrace();
+        for (byte b : fis) {
+            sb.append(b).append("\r\n");
         }
-
         return sb.toString();
     }
 }
